--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="ca">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <center><h1>PEDAZO DE JUEGO</h1></center>
+    <div id="partida"></div>
+    <script src="Front/functions.js"></script>
+    <script>loadQuestions();</script>
+    <form action="index.html">
+        <br><br>
+        <center><button id="final"> Finalitzar El Joc </button></center>
+        <br>
+    </form>
     
 </body>
 </html>
