Integracio de getPreguntes amb el front

--- a/web/index.html
+++ b/web/index.html
@@ -8,13 +8,12 @@
 <body>
     <center><h1>PEDAZO DE JUEGO</h1></center>
     <div id="partida"></div>
-    <script src="Front/functions.js"></script>
+    <script src="js/functions.js"></script>
     <script>loadQuestions();</script>
-    <form action="index.html">
+    <form action="">
         <br><br>
-        <center><button id="final"> Finalitzar El Joc </button></center>
+        <center><button onclick="finalitzarPartida()"> Finalitzar El Joc </button></center>
         <br>
     </form>
-    
 </body>
 </html>
