Implementación de usuario i nº de preguntas con divs

--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estils.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div id="inici"></div>
     <div id="pagina">
         <center>
             <h1>PEDAZO DE JUEGO</h1>
@@ -20,6 +22,7 @@
         <center><button id="final"> Finalitzar El Joc </button></center>
         <br>
     </div>
+    <div id="finalitzar"></div>
     <script src="js/functions.js"></script>
     <div id="final"></div>
 </body>
