--- a/web/admin.html
+++ b/web/admin.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilsCRUD.css">
 </head>
 <body>
-    <div id="pagina"></div>
+    <div id="taula"></div>
+
+    <div id="insert"></div>
+
+    <div id="edit"></div>
+
+    <div id="elimina"></div>
+
     <script src="js/functionsAdmin.js"></script>
 </body>
 </html>
