Final Jueves 3Oct

--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
         <center>
             <h1>PEDAZO DE JUEGO</h1>
         </center>
+        <div id="temporizador"></div>
         <div id="partida"></div>
         <br>
         <button id="prev">Anterior</button>
