Versio Final implementada

--- a/web/index.html
+++ b/web/index.html
@@ -12,13 +12,15 @@
     <div id="inici"></div>
     <div id="pagina">
         <center>
-            <h1>PEDAZO DE JUEGO</h1>
+            <h1>Quiz Game</h1>
         </center>
         <div id="temporizador"></div>
         <div id="partida"></div>
         <br>
-        <button id="prev">Anterior</button>
-        <button id="next">Següent</button>
+        <div class="boton-container">
+            <button id="prev">Anterior</button>
+            <button id="next">Següent</button>
+        </div>
         <br><br>
         <center><button id="final"> Finalitzar El Joc </button></center>
         <br>
