--- a/web/admin.html
+++ b/web/admin.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu Preguntass</title>
+    <link rel="icon" href="img/LogoPedralbes.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilsCRUD.css">
 </head>
 <body>
