--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/LogoPedralbes.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estils.css">
-    <title>Document</title>
+    <title>Quiz Game</title>
 </head>
 
 <body>
