--- a/web/admin.html
+++ b/web/admin.html
@@ -15,7 +15,7 @@
     <div id="edit"></div>
 
     <div id="elimina"></div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/functionsAdmin.js"></script>
 </body>
 </html>
