--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
         <br>
     </div>
     <div id="finalitzar"></div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/functions.js"></script>
     <div id="final"></div>
 </body>
